Added text to three initial projects

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
+            <div class="container"><small>Copyright © Wills Martin 2020</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
@@ -252,7 +252,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Ikigai</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -262,7 +262,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ikigai-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Ikigai is an narrative puzzle game about Oliver, an aspiring young artist who gets trapped in the world of a Japanese Ukiyo-e art piece. The player must switch between 3D and 2D perspectives to solve puzzles, explore the world, and navigate obstacles.</p>
+                                    <p class="mb-5">Ikigai was my senior project and was completed by multiple teams of five programmers, seven artists/designers, a musician, and a journalist. As lead programmer, I worked closely with the artists and designers to assign deliverables. Aside from managing the programmers, I acted as a technical artist and puzzle developer; I implemented rendering features, such as post-processing and shaders, and implemented puzzle mechanics.</p>
+                                    <p class="mb-5">More information can be found at our blog: <a href="https://www.placeholderdevs.com/">placeholderdevs.com</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -286,7 +288,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Flashback</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -296,7 +298,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/flashback-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Flashback is a puzzle game created for <a href="https://itch.io/jam/brackeys-4">Brackeys Jam 2020.2</a> under the theme Rewind. Flashback placed 2nd in Theme, 2nd in Game Design, and 11th Overall out of 1,850 submissions. Players must complete levels using their Rewind ability, which turns back time and to the beginning of the level and creates an Echo that repeats your actions from before the Rewind.</p>
+                                    <p class="mb-5">I worked on a team of three for this project with another programmer and an artist. I worked as the main technical artist, utilizing Unity's Universal Render Pipeline to add 2D lighting, post-processing effects, shaders, and particles. I also helped with the implementation of the primary mechanics.</p>
+                                    <p class="mb-5">The game can be downloaded on <a href="https://drewgraham.itch.io/flashback">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -320,7 +324,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Frankenstein</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -330,7 +334,14 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/frankenstein-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p style="font-style: italic;text-align: left;">i believe there is nothing
+                                        innate in the body. why every time a scientist
+                                        opens a child he finds only what he expected
+                                        to find.</p>
+                                    <p style="font-style: italic;text-align: right;">-Sam Sax, How To Spell Reductive</p>
+                                    <br/>
+                                    <p class="mb-5">Frankenstein is a short interactive poem about Mary Shelley's novel of the same name. It was a personal project created in Winter 2019-2020.</p>
+                                    <p class="mb-5">The game can be downloaded on <a href="https://willsmartin.itch.io/frankenstein">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
