--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Address</h4>
                         <p class="lead mb-0">
                             3514 Lancaster Avenue, Apt. 308
                             <br />
@@ -213,11 +213,10 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <h4 class="text-uppercase mb-4">Find me elsewhere</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Wills-M"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/willsthedev"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://willsmartin.itch.io/"><i class="fas fa-laptop-code"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <!-- <div class="col-lg-4">
