Added headers to portfolio items

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/ikigai.png" alt="" />
                         </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Ikigai</h4>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -81,6 +82,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/flashback.png" alt="" />
                         </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Flashback</h4>
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -90,6 +92,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/frankenstein.png" alt="" />
                         </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Frankenstein</h4>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
