--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <!-- <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2> -->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
                 <!-- Icon Divider-->
-                <!-- <div class="divider-custom">
+                <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                </div> -->
+                    <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                    <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                </div>
+                <br/>
                 <!-- Portfolio Grid Items-->
                 <div class="row">
                     <!-- Portfolio Item 1-->
@@ -95,6 +96,7 @@
                         <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Frankenstein</h4>
                     </div>
                     <!-- Portfolio Item 4-->
+                    <div class="col-lg-2"></div> <!-- filler div to push portfolio items to center -->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -113,15 +115,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
                         </div>
                     </div>
-                    <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
-                        </div>
-                    </div>
+                    <div class="col-lg-2"></div> <!-- filler div to push portfolio items to center -->
                 </div>
             </div>
         </section>
