Added internet manifesto portfolio item

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/internet-manifesto.png" alt="" />
                         </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Internet Manifesto</h4>
                     </div>
                     <div class="col-lg-2"></div> <!-- filler div to push portfolio items to center -->
                 </div>
@@ -337,7 +338,7 @@
                                         to find.</p>
                                     <p style="font-style: italic;text-align: right;">-Sam Sax, How To Spell Reductive</p>
                                     <br/>
-                                    <p class="mb-5">Frankenstein is a short interactive poem about Mary Shelley's novel of the same name. It was a personal project created in Winter 2019-2020.</p>
+                                    <p class="mb-5">Frankenstein is an interactive poem about Mary Shelley's novel of the same name. It was a personal project created in Winter 2019-2020.</p>
                                     <p class="mb-5">The game can be downloaded on <a href="https://willsmartin.itch.io/frankenstein">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -397,7 +398,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Internet Manifesto</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -405,9 +406,10 @@
                                         <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/internet-manifesto-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Internet Manifesto is a short experimental game created in a week for my Experimental Games class. The assignment was to create an interactive manifesto.</p>
+                                    <p class="mb-5">The game can be downloaded on <a href="https://willsmartin.itch.io/internet-manifesto">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
