--- a/index.html
+++ b/index.html
@@ -156,10 +156,13 @@
                     <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                     <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                 </div>
-                <!-- Contact Section Form-->
                 <div class="row">
+                    <div class="col-lg-12"><p class="lead text-center">Currently the best way to contact me is by emailing me at willsmmartin@gmail.com</p></div>
+                </div>
+                <!-- Contact Section Form-->
+                <!-- <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
+                         To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.
                         <form id="contactForm" name="sentMessage" novalidate="novalidate">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
@@ -194,7 +197,7 @@
                             <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Footer-->
