Made portfolio items more responsive to different device sizes.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Frankenstein</h4>
                     </div>
                     <!-- Portfolio Item 4-->
-                    <div class="col-lg-2"></div> <!-- filler div to push portfolio items to center -->
+                    <div class="d-md-none d-lg-block col-lg-2"></div> <!-- filler div to push portfolio items to center on small devices -->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -107,7 +107,8 @@
                         <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Falling</h4>
                     </div>
                     <!-- Portfolio Item 5-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                    <div class="d-none col-md-3 d-lg-none d-md-block"></div><!-- filler div to push portfolio items to center on medium devices -->
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0"> 
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -116,7 +117,8 @@
                         </div>
                         <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Internet Manifesto</h4>
                     </div>
-                    <div class="col-lg-2"></div> <!-- filler div to push portfolio items to center -->
+                    <div class="d-none col-md-3 d-lg-none d-md-block"></div><!-- filler div to push portfolio items to center on medium devices -->
+                    <div class="d-md-none d-lg-block col-lg-2"></div> <!-- filler div to push portfolio items to center on small devices -->
                 </div>
             </div>
         </section>
