Spelling, grammar, and consistency.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ikigai-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Ikigai is an narrative puzzle game about Oliver, an aspiring young artist who gets trapped in the world of a Japanese Ukiyo-e art piece. The player must switch between 3D and 2D perspectives to solve puzzles, explore the world, and navigate obstacles.</p>
+                                    <p class="mb-5">Ikigai is a narrative puzzle game about Oliver, an aspiring young artist who gets trapped in the world of a Japanese Ukiyo-e art piece. The player must switch between 2D and 3D perspectives to solve puzzles, explore the world, and navigate obstacles.</p>
                                     <p class="mb-5">Ikigai was my senior project and was completed by multiple teams of five programmers, seven artists/designers, a musician, and a journalist. As lead programmer, I worked closely with the artists and designers to assign deliverables. Aside from managing the programmers, I acted as a technical artist and puzzle developer; I implemented rendering features, such as post-processing and shaders, and implemented puzzle mechanics.</p>
                                     <p class="mb-5">More information can be found at our blog: <a href="https://www.placeholderdevs.com/">placeholderdevs.com</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -301,7 +301,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/flashback-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Flashback is a puzzle game created for <a href="https://itch.io/jam/brackeys-4">Brackeys Jam 2020.2</a> under the theme Rewind. Flashback placed 2nd in Theme, 8th in Game Design, and 11th Overall out of 1,850 submissions. Players must complete levels using their Rewind ability, which turns back time and to the beginning of the level and creates an Echo that repeats your actions from before the Rewind.</p>
+                                    <p class="mb-5">Flashback is a puzzle game created for <a href="https://itch.io/jam/brackeys-4">Brackeys Jam 2020.2</a> under the theme Rewind. Flashback placed 2nd in Theme, 8th in Game Design, and 11th Overall out of 1,850 submissions. Players must complete levels using their Rewind ability, which turns back time to the beginning of the level and creates an Echo that repeats your actions from before the Rewind.</p>
                                     <p class="mb-5">I worked on a team of three for this project with another programmer and an artist. I worked as the main technical artist, utilizing Unity's Universal Render Pipeline to add 2D lighting, post-processing effects, shaders, and particles. I also helped with the implementation of the primary mechanics.</p>
                                     <p class="mb-5">The game can be downloaded on <a href="https://drewgraham.itch.io/flashback">itch</a>.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -379,7 +379,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/falling.gif" alt="" />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/falling-reveal.gif" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Falling is a short experience in VR. It was a solo project created in Fall 2019 as an experiment with rendering in VR.</p>
+                                    <p class="mb-5">Falling is a short experience in VR. It was a personal project created in Fall 2019 as an experiment with rendering in VR.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
