Added a new miscellaneous section to portfolio and added a seam carving item.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                     <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                 </div>
-                <br/>
-                <!-- Portfolio Grid Items-->
-                <div class="row">
+                <!-- Game Projects -->
+                <h2 class="text-center text-uppercase text-secondary mb-0">Game Projects</h2>
+                <div class="row portfolio-section">
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
@@ -119,6 +119,43 @@
                     </div>
                     <div class="d-none col-md-3 d-lg-none d-md-block"></div><!-- filler div to push portfolio items to center on medium devices -->
                     <div class="d-md-none d-lg-block col-lg-2"></div> <!-- filler div to push portfolio items to center on small devices -->
+                </div>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Miscellaneous -->
+                <h2 class="text-center text-uppercase text-secondary mb-0">Miscellaneous</h2>
+                <div class="row portfolio-section">
+                    <!-- Portfolio Item 1-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModalMisc1">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/seam-carving-dog.gif" alt="" />
+                        </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Seam Carving</h4>
+                    </div>
+                    <!-- Portfolio Item 2-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/flashback.png" alt="" />
+                        </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Flashback</h4>
+                    </div>
+                    <!-- Portfolio Item 3-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/frankenstein.png" alt="" />
+                        </div>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Frankenstein</h4>
+                    </div>
                 </div>
             </div>
         </section>
@@ -452,6 +489,42 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Misc Portfolio Modal 1-->
+        <div class="portfolio-modal modal fade" id="portfolioModalMisc1" tabindex="-1" role="dialog" aria-labelledby="portfolioModalMisc1Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Seam Carving</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                                        <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/seam-carving-dog.gif" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/seam-carving-woman.gif" alt="" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">Seen in the gifs above is a seam carving program I wrote for my Computational Photography class. It works by finding the energy of each pixel and creating a list of seams ranked by energy and then removing those seams in order of energy.</p>
+                                    <p class="mb-5">This program was written in MATLAB.</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
