--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModalMisc3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/frankenstein.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/particle-main.png" alt="" />
                         </div>
-                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Frankenstein</h4>
+                        <h4 style="padding-top:1rem" class="text-center masthead-heading text-uppercase mb-0">Particles</h4>
                     </div>
                 </div>
             </div>
@@ -563,6 +563,41 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/substance-moss.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">The images above are substances I made in Substance Designer for fun.</p>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Misc Portfolio Modal 3-->
+        <div class="portfolio-modal modal fade" id="portfolioModalMisc3" tabindex="-1" role="dialog" aria-labelledby="portfolioModalMisc3Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Substance Designer</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                                        <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/particle-blue.gif" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/particle-green.gif" alt="" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">The gifs above are particle systems I made in Unity for fun.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
