Small about me change.

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Hello, my name is Wills and I'm a developer. I recently graduated from Drexel University with a degree in Computer Science and I'm looking for work. Contact me below!</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">When I'm not making games there's a good chance I'm playing them. I am an avid consumer of media and art and I like learning about how they're made.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Hi! My name is Wills and I'm a developer. I recently graduated from Drexel University with a degree in Computer Science and I'm looking for work. Contact me below!</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">I've been making games since I was 10 and when I'm not making them there's a good chance I'm playing them. I am an avid consumer of media and art and I like learning about how they're made.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <!-- <div class="text-center mt-4">
