--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Ikigai is a narrative puzzle game about Oliver, an aspiring young artist who gets trapped in the world of a Japanese Ukiyo-e art piece. The player must switch between 2D and 3D perspectives to solve puzzles, explore the world, and navigate obstacles.</p>
                                     <p class="mb-5">Ikigai was my senior project and was completed by multiple teams of five programmers, seven artists/designers, a musician, and a journalist. As lead programmer, I worked closely with the artists and designers to assign deliverables. Aside from managing the programmers, I acted as a technical artist and puzzle developer; I implemented rendering features, such as post-processing and shaders, and implemented puzzle mechanics.</p>
+                                    <p class="mb-5">An example of the post-processing:</p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ikigai-post-processing-outline.png" alt="" />
                                     <p class="mb-5">More information can be found at our blog: <a href="https://www.placeholderdevs.com/">placeholderdevs.com</a></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -331,6 +333,9 @@
                                         <!-- <div class="divider-custom-icon"><i class="fas fa-star"></i></div> -->
                                     </div>
                                     <!-- Portfolio Modal - Image-->
+                                    <div class="portfolio-video embed-responsive embed-responsive-16by9">
+                                        <iframe class="rounded embed-responsive-item" src="https://www.youtube.com/embed/AKRZJBV2I6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/flashback-full.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Flashback is a puzzle game created for <a href="https://itch.io/jam/brackeys-4">Brackeys Jam 2020.2</a> under the theme Rewind. Flashback placed 2nd in Theme, 8th in Game Design, and 11th Overall out of 1,850 submissions. Players must complete levels using their Rewind ability, which turns back time to the beginning of the level and creates an Echo that repeats your actions from before the Rewind.</p>
